--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     
-    <button class="tablink" onclick="openPage"('Awal, this, 'red')">Awal</button>
-    <button class="tablink" onclick="openPage"('Game, this, 'aqua')">Game</button>
-    <button class="tablink" onclick="openPage"('Contact, this, 'blue')">Contact</button>
-    <button class="tablink" onclick="openPage"('Tentang, this, 'orange')">Tentang</button>
+    <button class="tablink" onclick="openPage('Awal', 'this', 'red')">Awal</button>
+    <button class="tablink" onclick="openPage('Game', 'this', 'aqua')">Game</button>
+    <button class="tablink" onclick="openPage('Contact', 'this', 'blue')">Contact</button>
+    <button class="tablink" onclick="openPage('Tentang', 'this', 'orange')">Tentang</button>
 
     <div id="Awal" class="tabcontent">
         <h3>Awal</h3>
